--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,30 +6,62 @@
     <h3>Личный кабинет пользователя</h3>
     <br>
     <div class="container mt-2 d-flex">
-        <div class="card p-3">
-            <div class="container">
-                <div class="row no-gutters">
-                    <div class="col">
-                        <div class="image"><img
-                                src="{{ image_file }}"
-                                class="rounded" width="125">
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="float-right">
-                            <div class="media-body">
-                                <h4 class="account-heading m-1">{{ current_user.username }}</h4>
-                                <h6 class="text-secondary m-1">{{ current_user.email }}</h6>
-                                <h5 class="text-secondary m-1">{{ current_user.surname }} {{current_user.name}}</h5>
+        <div class="row">
+            <div class="col">
+                <div class="card p-3">
+                    <div class="container">
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <div class="image"><img
+                                        src="{{ image_file }}"
+                                        class="rounded" width="125">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="float-right">
+                                    <div class="media-body">
+                                        <h4 class="account-heading m-1">{{ current_user.username
+                                            }}</h4>
+                                        <h6 class="text-secondary m-1">{{ current_user.email }}</h6>
+                                        <h5 class="text-secondary m-1">{{ current_user.surname }}
+                                            {{current_user.name}}</h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <a class="btn btn-light fa fa-edit" href="/update_user_data"></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-auto">
-                        <a class="btn btn-light fa fa-edit" href="/update_user_data"></a>
-                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card p-3">
+                    <h3>Классы</h3>
+                    {% if classes|length != 0 %}
+                    <table class="table table-hover">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Название</th>
+                            <th scope="col"></th>
+                        </tr>
+                        </thead>
+                        {% for item in classes %}
+                        <tr>
+                            <td>{{item['name']}}</td>
+                            <td><a class="btn-sm" href="/class/{{item['id']}}"><i class="fa fa-arrow-right"></i></a></td>
+                        </tr>
+                        {% endfor %}
+                    </table>
+                    {% else %}
+                    <p>Вы не состоите ни в одном классе</p>
+                    {% endif %}
+                    <a href="/add_class" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Создать класс</a>
                 </div>
             </div>
         </div>
+
+
     </div>
 </div>
 
