--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -29,7 +29,9 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <a class="btn btn-light fa fa-edit" href="/update_user_data"></a>
+                                <a class="btn btn-light" href="/update_user_data"><i class=" fa fa-edit"></i></a>
+
+                                <a class="btn btn-light" href="/logout"><i class="fa fa-sign-out"></i></a>
                             </div>
                         </div>
                     </div>
