--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -11,13 +11,13 @@
                 <div class="card p-3">
                     <div class="container">
                         <div class="row no-gutters">
-                            <div class="col">
+                            <div class="col d-flex justify-content-center">
                                 <div class="image"><img
                                         src="{{ image_file }}"
                                         class="rounded" width="125">
                                 </div>
                             </div>
-                            <div class="col">
+                            <div class="col d-flex justify-content-center">
                                 <div class="float-right">
                                     <div class="media-body">
                                         <h4 class="account-heading m-1">{{ current_user.username
