--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: column;
 }
+
 .diary-card {
     flex-grow: 1;
     margin-top: 1rem;
@@ -38,4 +39,40 @@
     margin-top: 1rem;
     padding: 0.5rem;
     flex-direction: row;
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    html {
+        font-size: 10px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    html {
+        font-size: 13px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    html {
+        font-size: 18px;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    html {
+        font-size: 20px;
+    }
 }
